[project]
name = "pyadi"
version = "1.0.1"
authors = [
  { name="Johannes Willkomm", email="jwillkomm@ai-and-it.de" },
]
description = "Source transformation AD for Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aiandit/pyadi"
"Bug Tracker" = "https://github.com/aiandit/pyadi/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pydiff = "pyadi.cmdline:pydiff"
pycanon = "pyadi.cmdline:pycanon"
